# dtekv-emulator-web

./: .cspell.json  .dockerignore  .eslintrc.cjs  CHANGELOG.md  Dockerfile  README.md  build-push-docker.sh  build-push.sh  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml  fmt.yml  lint.yml
src/: App.tsx  atoms.ts  consts.ts  cpu.ts  declaration.d.ts  fonts.css  global.css  global.scss  main.tsx  stores.ts  types.ts
src/components/HexDisplay/: HexDisplay.module.css  HexDisplay.module.scss  index.tsx
src/components/Led/: Led.module.css  index.tsx
src/components/NavButton/: NavButton.module.css  index.tsx
src/components/RatioBox/: ctx.ts  index.tsx
src/components/RatioImageBox/: RatioImageBox.module.scss  index.tsx
src/components/Switch/: Switch.module.css  index.tsx
src/components/WebGpuNotSupported/: WebGpuNotSupported.module.css  index.tsx
src/contexts/: CpuContext.tsx
src/hooks/: useDialog.ts  useIsSafari.ts  useOnClickOutside.ts  useUart.ts  useWindowDimensions.ts
src/pages/Emulator/: Emulator.module.css  Emulator.module.scss  index.tsx
src/pages/ShouldUpdate/: index.tsx
src/pages/TooSmall/: index.tsx
src/partials/Dialog/: Dialog.module.css  index.tsx
src/partials/Layout/: Layout.module.css  index.tsx
src/utils/: cx.ts  feqParser.ts  fileSystem.ts
src/views/Emulator/: index.tsx  (+1 more)
wasm/: Cargo.toml  dtekv_emulator_web.wasm  dtekv_emulator_web_bg.wasm
wasm/pkg/: dtekv_emulator_web.d.ts  dtekv_emulator_web.js  dtekv_emulator_web_bg.js  dtekv_emulator_web_bg.wasm  dtekv_emulator_web_bg.wasm.d.ts  package.json
wasm/src/: bus.rs  lib.rs  timer.rs  vga_buffer.rs
(+39 files in other folders)
