[package]
name = "dtekv_emulator_web"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
dtekv_emulator_core = { git = "https://github.com/PumpedSardines/dtekv-emulator-core", rev="9ec0e081f08aa166ab2c1a04edcd253e0e16bcfc" }
wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = "0.3.72"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
